--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm install groq-sdk@latest"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
@@ -14,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "groq-sdk": "^0.3.1",
     "lucide-react": "^0.292.0",
     "next": "13.5.6",
     "react": "^18.2.0",
@@ -31,6 +33,9 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
 
